--- a/IHadThe-Storyboard/Base.lproj/Main.storyboard
+++ b/IHadThe-Storyboard/Base.lproj/Main.storyboard
@@ -1,24 +1,62 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="23094" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="73h-z7-1v1">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23084"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--IHadThe-->
+        <scene sceneID="wks-g2-oQL">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <navigationController title="IHadThe" automaticallyAdjustsScrollViewInsets="NO" id="73h-z7-1v1" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="o6O-oO-MZi">
+                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="UBs-D4-mvw" kind="relationship" relationship="rootViewController" id="vvE-1O-fEs"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="PyT-Bj-y4l" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="893.89312977099235" y="-27.464788732394368"/>
+        </scene>
+        <!--Restaurant List View Controller-->
+        <scene sceneID="2Wt-ol-61Y">
+            <objects>
+                <tableViewController id="UBs-D4-mvw" customClass="RestaurantListViewController" customModule="IHadThe_Storyboard" customModuleProvider="target" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="idh-uU-6tC"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="yrg-BC-Bfo" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1820.6106870229007" y="-27.464788732394368"/>
+        </scene>
+        <!--Menu List View Controller-->
+        <scene sceneID="d1a-Xm-wQy">
+            <objects>
+                <tableViewController id="U0y-pm-juE" customClass="MenuListViewController" customModule="IHadThe_Storyboard" customModuleProvider="target" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="jwp-F3-IRY" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2813" y="-27"/>
+        </scene>
+        <!--Meal Detail View Controller-->
+        <scene sceneID="9vc-fG-owi">
+            <objects>
+                <viewController id="VNi-uZ-kgn" customClass="MealDetailViewController" customModule="IHadThe_Storyboard" customModuleProvider="target" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="NvU-WJ-QB8" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3782" y="-27"/>
+        </scene>
+        <!--Review Submission View Controller-->
+        <scene sceneID="5B0-rl-0tP">
+            <objects>
+                <viewController id="5Rl-Jp-X0T" customClass="ReviewSubmissionViewController" customModule="IHadThe_Storyboard" customModuleProvider="target" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Z6o-kz-qBh" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4793" y="-27"/>
         </scene>
     </scenes>
 </document>
